completed aproach 2: removing the first element on the stack when a possible redundant event is detected, can havemultiple redundant events on the same stack - too agressive